--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,159 @@
 @import url('./src/header.css');
 @import url('./src/hamburger.css');
 @import url('.src/.footer.css');
+
+/* ----- HERO ----- */
+
+.hero-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    height: 70vh;
+    width: 90%;
+
+    margin: 0 auto;
+}
+
+.hero-wrapper__background {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    height: 100%;
+    width: 100%;
+
+    background: url('./assets/images/adria-garcia-sarceda-O560d5Mnc04-unsplash.jpg')
+        center / cover no-repeat;
+
+    & p {
+        color: var(--light-color);
+        font-size: 1.5rem;
+        font-weight: 600;
+        font-style: italic;
+        text-transform: uppercase;
+        letter-spacing: 10px;
+    }
+
+    & h1 {
+        color: var(--light-color);
+        font-family: var(--rubik-glitch);
+        font-size: 4rem;
+        text-transform: uppercase;
+        opacity: 0.5;
+    }
+}
+
+.custom-shape-divider-bottom-1707487344 {
+    position: absolute;
+    bottom: -1px;
+    left: -1px;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1707487344 svg {
+    position: relative;
+    display: block;
+    width: calc(154% + 1.3px);
+    height: 99px;
+}
+
+.custom-shape-divider-bottom-1707487344 .shape-fill {
+    fill: #ffffff;
+}
+
+/* ----- EVENTS ----- */
+
+.events-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
+    min-height: 100vh;
+    width: 100%;
+
+    & h2 {
+        font-size: 1.75rem;
+        font-weight: 700;
+        margin: 6rem auto 1rem auto;
+    }
+}
+
+.events__night-event {
+    display: flex;
+    width: 100%;
+
+    & img {
+        flex-basis: 65%;
+        max-height: 550px;
+    }
+
+    > div {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        flex-basis: 35%;
+
+        padding: 0 4rem 0 2rem;
+
+        background: var(--dark-color);
+        color: var(--light-color);
+
+        & h3 {
+            margin-bottom: 2rem;
+
+            font-size: 1.5rem;
+            font-weight: 700;
+            text-transform: uppercase;
+        }
+
+        & a {
+            margin-top: 2rem;
+
+            color: var(--light-color);
+            font-weight: 700;
+        }
+    }
+}
+
+.events__other-events {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    gap: 2rem;
+
+    margin-top: 2rem;
+}
+
+.events__other-events .card {
+    max-width: 550px;
+    height: auto;
+
+    > div img {
+        width: 100%;
+        max-height: 300px;
+        object-fit: cover;
+    }
+
+    & h3 {
+        margin: 0.5rem 0 2rem 0;
+        text-transform: uppercase;
+        font-weight: 700;
+    }
+
+    & p {
+        margin-bottom: 1rem;
+    }
+
+    & a {
+        color: var(--purple);
+        font-weight: 700;
+    }
+}
