--- a/src/footer.css
+++ b/src/footer.css
@@ -6,10 +6,11 @@
     flex-direction: column;
     justify-content: center;
 
+    padding: 3rem 8rem;
+    margin-top: 4rem;
+
     width: 100%;
     height: 450px;
-
-    padding: 3rem 8rem;
 
     background: var(--dark-color);
     color: var(--light-color);
