--- a/src/header.css
+++ b/src/header.css
@@ -5,13 +5,18 @@
     justify-content: space-between;
     align-items: center;
 
-    padding: 0.5rem 3rem;
+    padding: 0.5rem 5rem;
 
+    height: 80px;
     width: 100%;
 
     font-family: var(--montserrat);
 
     border-top: 15px solid var(--dark-color);
+
+    @media only screen and (max-width: 800px) {
+        padding: 0.5rem;
+    }
 }
 
 .header-wrapper__left {
@@ -30,15 +35,27 @@
     & span {
         font-size: 1.25rem;
         font-weight: 700;
+
+        @media only screen and (max-width: 660px) {
+            font-size: 0.875rem;
+        }
     }
 
     & p {
         font-size: 0.75rem;
+
+        @media only screen and (max-width: 660px) {
+            font-size: 0.625rem;
+        }
     }
 }
 
+.header-wrapper__right {
+    height: 80px;
+    width: 80px;
+}
+
 .header-wrapper__right ul {
-    display: inline-flex;
     list-style: none;
 
     & li {
@@ -52,4 +69,175 @@
     font-weight: 700;
     color: var(--dark-color);
     text-decoration: none;
+    font-size: 1.25rem;
+}
+
+.menu-wrap {
+    position: fixed;
+    top: 15px;
+    right: 0px;
+    z-index: 999;
+}
+
+.toggler {
+    position: fixed;
+
+    top: 15px;
+    right: 0;
+    width: 50px;
+    height: 50px;
+
+    cursor: pointer;
+    opacity: 0;
+    z-index: 1000;
+}
+
+.menu-wrap .hamburger {
+    position: absolute;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    top: 0;
+    right: 0;
+    width: 60px;
+    height: 60px;
+
+    background: transparent;
+    padding: 1rem;
+    z-index: 999;
+}
+
+/* Hamburger line */
+.menu-wrap .hamburger > div {
+    position: relative;
+
+    display: flex;
+    flex: none;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    height: 3px;
+
+    background-color: var(--dark-color);
+
+    transition: all 0.4s ease;
+}
+/* Top and bottom lines */
+.menu-wrap .hamburger > div:before,
+.menu-wrap .hamburger > div:after {
+    content: '';
+
+    position: absolute;
+
+    top: -10px;
+    width: 100%;
+    height: 3px;
+
+    background: inherit;
+
+    z-index: 999;
+}
+/* Moves one of the lines down */
+.menu-wrap .hamburger > div:after {
+    top: 10px;
+}
+
+/* Toggler animation */
+.toggler:checked ~ .hamburger > div {
+    transform: rotate(135deg);
+    background-color: var(--light-color);
+}
+
+/* Turns the lines into an X */
+.toggler:checked ~ .hamburger > div:before,
+.toggler:checked ~ .hamburger > div:after {
+    top: 0;
+    transform: rotate(90deg);
+}
+
+/* Show the menu */
+
+.toggler:checked + .menu {
+    visibility: visible;
+}
+
+.toggler:checked + .menu > div {
+    transform: scale(1);
+    transition-duration: 3ms ease;
+}
+
+.toggler:checked + .menu > div > div {
+    opacity: 1;
+    transition: opacity 0.4s ease 0.4s;
+}
+
+.menu-wrap .menu {
+    position: fixed;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    visibility: visible;
+    overflow: hidden;
+}
+
+.menu-wrap .menu > div {
+    position: fixed;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    top: 0;
+    right: 0;
+
+    width: 30%;
+    height: 100vh;
+
+    background: var(--dark-color);
+    opacity: 1;
+    transform: scale(1);
+    transition: all 0.4s ease;
+}
+
+.menu-wrap .menu > div > div {
+    text-align: left;
+    max-width: 100vw;
+    max-height: 100vh;
+    opacity: 1;
+    transition: opacity 0.4s ease;
+}
+
+.menu-wrap .menu > div > div > ul {
+    margin: 0;
+    padding: 0;
+}
+
+.menu-wrap .menu > div > div > ul > li {
+    list-style: none;
+    color: #fff;
+    font-weight: 700;
+    font-size: 1.5rem;
+    padding: 1rem;
+}
+
+.menu-wrap .menu > div > div > ul > li > a,
+.menu-wrap .menu > div > div > ul > li > details,
+.menu-wrap .menu > div > div > ul > li > details a {
+    color: inherit;
+    text-decoration: none;
+    transition: color 0.4s ease;
+}
+
+.menu-wrap .menu > div > div > ul > li > details a {
+    margin-left: 0.5rem;
 }
