add responsiveness to navbar

--- a/src/header.css
+++ b/src/header.css
@@ -5,7 +5,7 @@
     justify-content: space-between;
     align-items: center;
 
-    padding: 0.5rem 5rem;
+    padding: 0.5rem 0 0.5rem 6rem;
 
     height: 80px;
     width: 100%;
@@ -50,17 +50,16 @@
     }
 }
 
-.header-wrapper__right {
-    height: 80px;
-    width: 80px;
-}
-
 .header-wrapper__right ul {
     list-style: none;
 
     & li {
         margin: 0 0.75rem;
     }
+}
+
+.header-wrapper__right details li {
+    margin: 1rem 0.5rem;
 }
 
 .header-wrapper__right a,
@@ -83,16 +82,20 @@
     position: fixed;
 
     top: 15px;
-    right: 0;
+    right: 5rem;
     width: 50px;
     height: 50px;
 
     cursor: pointer;
     opacity: 0;
     z-index: 1000;
+
+    @media only screen and (max-width: 800px) {
+        right: 0.5rem;
+    }
 }
 
-.menu-wrap .hamburger {
+.header-wrapper .menu-wrap .hamburger {
     position: absolute;
 
     display: flex;
@@ -100,17 +103,21 @@
     justify-content: center;
 
     top: 0;
-    right: 0;
+    right: 5rem;
     width: 60px;
     height: 60px;
 
     background: transparent;
     padding: 1rem;
     z-index: 999;
+
+    @media only screen and (max-width: 800px) {
+        right: 0.5rem;
+    }
 }
 
 /* Hamburger line */
-.menu-wrap .hamburger > div {
+.header-wrapper .menu-wrap .hamburger > div {
     position: relative;
 
     display: flex;
@@ -126,8 +133,8 @@
     transition: all 0.4s ease;
 }
 /* Top and bottom lines */
-.menu-wrap .hamburger > div:before,
-.menu-wrap .hamburger > div:after {
+.header-wrapper .menu-wrap .hamburger > div:before,
+.header-wrapper .menu-wrap .hamburger > div:after {
     content: '';
 
     position: absolute;
@@ -141,35 +148,35 @@
     z-index: 999;
 }
 /* Moves one of the lines down */
-.menu-wrap .hamburger > div:after {
+.header-wrapper .menu-wrap .hamburger > div:after {
     top: 10px;
 }
 
 /* Toggler animation */
-.toggler:checked ~ .hamburger > div {
+.toggler:checked ~ .header-wrapper .menu-wrap .hamburger > div {
     transform: rotate(135deg);
     background-color: var(--light-color);
 }
 
 /* Turns the lines into an X */
-.toggler:checked ~ .hamburger > div:before,
-.toggler:checked ~ .hamburger > div:after {
+.toggler:checked ~ .header-wrapper .menu-wrap .hamburger > div:before,
+.toggler:checked ~ .header-wrapper .menu-wrap .hamburger > div:after {
     top: 0;
     transform: rotate(90deg);
 }
 
 /* Show the menu */
 
-.toggler:checked + .menu {
+.toggler:checked + .header-wrapper .menu-wrap .menu {
     visibility: visible;
 }
 
-.toggler:checked + .menu > div {
+.toggler:checked + .header-wrapper .menu-wrap .menu > div {
     transform: scale(1);
     transition-duration: 3ms ease;
 }
 
-.toggler:checked + .menu > div > div {
+.toggler:checked + .header-wrapper .menu-wrap .menu > div > div {
     opacity: 1;
     transition: opacity 0.4s ease 0.4s;
 }
@@ -186,7 +193,7 @@
     width: 100%;
     height: 100%;
 
-    visibility: visible;
+    visibility: hidden;
     overflow: hidden;
 }
 
@@ -205,8 +212,12 @@
 
     background: var(--dark-color);
     opacity: 1;
-    transform: scale(1);
+    transform: scale(0);
     transition: all 0.4s ease;
+
+    @media only screen and (max-width: 800px) {
+        width: 100%;
+    }
 }
 
 .menu-wrap .menu > div > div {
