--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,10 @@
         font-style: italic;
         text-transform: uppercase;
         letter-spacing: 10px;
+
+        @media only screen and (max-width: 800px) {
+            font-size: 1rem;
+        }
     }
 
     & h1 {
@@ -48,6 +52,11 @@
         font-size: 4rem;
         text-transform: uppercase;
         opacity: 0.5;
+        text-align: center;
+
+        @media only screen and (max-width: 800px) {
+            font-size: 3.5rem;
+        }
     }
 }
 
@@ -150,12 +159,22 @@
     width: 80%;
 
     margin: 2rem;
+
+    @media only screen and (max-width: 470px) {
+        grid-template-columns: 1fr;
+        margin: 1rem 0 0 0;
+        width: 100%;
+    }
 }
 
 .events__other-events .card img {
     width: 100%;
     max-height: 50%;
     object-fit: cover;
+
+    /* @media only screen and (max-width: 470px) {
+        max-height: 30%;
+    } */
 }
 
 .events__other-events .card__info {
