--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -12,6 +12,8 @@
     margin-top: 4rem;
 
     width: 100%;
+    bottom: 0;
+    left: 0;
 
     background: var(--dark-color);
     color: var(--light-color);
@@ -65,6 +67,11 @@
     @media only screen and (max-width: 800px) {
         text-align: center;
     }
+}
+
+.info-wrapper__location a {
+    display: flex;
+    flex-direction: column;
 }
 
 .info-wrapper__opening-hours > div {
