--- a/src/css/global.css
+++ b/src/css/global.css
@@ -4,6 +4,8 @@
 @import url('./header.css');
 @import url('./footer.css');
 
+@import url('../../index.css');
+
 h1 {
     font-size: 2rem;
     font-weight: 700;
