--- a/src/css/global.css
+++ b/src/css/global.css
@@ -5,11 +5,21 @@
 @import url('./footer.css');
 
 @import url('../../index.css');
+@import url('./about.css');
+@import url('./contribution.css');
 
 h1 {
     font-size: 2rem;
     font-weight: 700;
     margin-bottom: 2rem;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
 }
 
 /* ----- HERO ----- */
