--- a/index.css
+++ b/index.css
@@ -11,8 +11,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    position: relative;
+    align-items: center; /* 
+    position: relative; */
 
     min-height: 100vh;
     width: 100%;
@@ -72,51 +72,5 @@
 
     @media only screen and (max-width: 800px) {
         flex-direction: column;
-    }
-}
-
-.events__other-events {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
-    justify-content: center;
-    gap: 2rem;
-    width: 80%;
-
-    margin: 2rem;
-
-    @media only screen and (max-width: 470px) {
-        grid-template-columns: 1fr;
-        margin: 1rem 0 0 0;
-        width: 100%;
-    }
-}
-
-.events__other-events .card img {
-    width: 100%;
-    max-height: 50%;
-    object-fit: cover;
-
-    /* @media only screen and (max-width: 470px) {
-        max-height: 30%;
-    } */
-}
-
-.events__other-events .card__info {
-    & h3 {
-        margin: 0.5rem 0 2rem 0;
-        text-transform: uppercase;
-        font-weight: 700;
-    }
-
-    & p {
-        margin-bottom: 1rem;
-    }
-
-    & a {
-        color: var(--purple);
-        font-weight: 700;
-    }
-    @media only screen and (max-width: 450px) {
-        margin: 0 1rem;
     }
 }
