--- a/src/css/global.css
+++ b/src/css/global.css
@@ -154,3 +154,26 @@ main {
         margin: 0 1rem;
     }
 }
+
+.general-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 80vw;
+    margin: 2rem auto;
+
+    & h2 {
+        font-size: 1.25rem;
+        font-weight: 700;
+        margin-top: 2rem;
+    }
+
+    & p {
+        margin: 1rem 0;
+    }
+}
+
+.general-wrapper > div ul {
+    list-style: disc;
+    margin-top: 0.5rem;
+    margin-left: 1rem;
+}
