--- a/src/css/exhibitions.css
+++ b/src/css/exhibitions.css
@@ -14,7 +14,7 @@
     margin: 0 auto;
 }
 
-.evolution-wrapper {
+.main-event-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -22,6 +22,6 @@
     width: 100%;
 }
 
-.evolution-wrapper p {
+.main-event-wrapper p {
     margin-top: 1rem;
 }
