--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,7 +7,7 @@
     justify-content: space-between;
     align-items: center;
 
-    padding: 0.5rem 6em;
+    padding: 0.5rem 1rem;
 
     height: 80px;
     width: 100%;
@@ -60,7 +60,7 @@
     position: fixed;
 
     top: 15px;
-    right: 5rem;
+    right: 1rem;
     width: 50px;
     height: 50px;
 
