add space between links

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -82,6 +82,7 @@
 
 .info-wrapper__quick-links a {
     display: flex;
+    margin-bottom: 0.25rem;
 
     @media only screen and (max-width: 800px) {
         justify-content: center;
