--- a/index.css
+++ b/index.css
@@ -52,18 +52,18 @@
         color: var(--light-color);
 
         & h3 {
-            margin-bottom: 2rem;
-
             font-size: 1.5rem;
             font-weight: 700;
             text-transform: uppercase;
         }
 
         & a {
-            margin-top: 2rem;
-
             color: var(--light-color);
             font-weight: 700;
+        }
+
+        & p {
+            margin: 2rem 0;
         }
 
         @media only screen and (max-width: 800px) {
