--- a/src/css/contact-us.css
+++ b/src/css/contact-us.css
@@ -1,12 +1,17 @@
 @import url('./global.css');
-
+/* 
 .exhibitions-hero__background {
     background: url('https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7886.356745399663!2d5.3187825!3d60.385946!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x463cfc01b28180bd%3A0x74b5075aad390869!2sNoroff%20Bergen!5e0!3m2!1sen!2sno!4v1708592993426!5m2!1sen!2sno')
         center / cover no-repeat;
+} */
+
+.hero-wrapper__background iframe {
+    height: 100%;
+    width: 100%;
 }
 
 .form-wrapper {
-    max-width: 650px;
+    max-width: 850px;
     margin: 0 1rem;
 
     @media only screen and (ma-width: 768px) {
