add hero img to stylesheet

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -2,6 +2,11 @@
 
 /* ----- ABOUT  ----- */
 
+.about__background {
+    background: url('../../assets/images/scott-webb-102825.jpg') center / cover
+        no-repeat;
+}
+
 .about-wrapper {
     display: flex;
     flex-direction: column;
