--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 @import url('./src/css/global.css');
 @import url('./src/css/bsm-heading.css');
 
+/* Photo by Adria Garcia */
 .landing-hero__background {
     background: url('./assets/images/adria-garcia-sarceda-O560d5Mnc04-unsplash.jpg')
         center / cover no-repeat;
@@ -12,9 +13,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; /* 
-    position: relative; */
-
+    align-items: center;
     min-height: 100vh;
     width: 100%;
 
