--- a/src/css/about.css
+++ b/src/css/about.css
@@ -12,50 +12,57 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
     width: 80vw;
-    margin: 2rem auto;
+    margin: 2rem auto 0 auto;
 
-    @media only screen and (max-width: 900px) {
+    & h1 {
+        text-align: center;
+    }
+
+    @media only screen and (max-width: 1000px) {
         width: 100%;
         margin: 0 1rem;
     }
 }
 
 .about-wrapper__items {
-    display: grid;
-    grid-template-columns: 70% 25%;
+    display: flex;
     align-items: flex-start;
-    gap: 1.5rem;
-    margin: 1rem auto;
+    justify-content: center;
+    gap: 1rem;
+    margin: 1rem 0;
     width: 100%;
 
     & h2 {
         font-size: 1.5rem;
 
-        @media only screen and (max-width: 700px) {
+        @media only screen and (max-width: 1000px) {
             margin: 1rem 2rem;
         }
     }
 
     & p {
         margin: 1rem 0;
-        @media only screen and (max-width: 700px) {
+        @media only screen and (max-width: 1000px) {
             margin: 1rem 2rem;
         }
     }
 
-    @media only screen and (max-width: 700px) {
-        grid-template-columns: 1fr;
+    @media only screen and (max-width: 1000px) {
+        flex-direction: column;
         margin: 2rem;
     }
+}
+
+.text-wrapper {
+    flex-basis: 75%;
 }
 
 .contact-us-wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: flex-start;
+    flex-basis: 25%;
 
     width: 265px;
 
@@ -64,7 +71,7 @@
     background: var(--dark-color);
     color: var(--light-color);
 
-    @media only screen and (max-width: 900px) {
+    @media only screen and (max-width: 1000px) {
         width: 110%;
         margin: -1rem;
     }
@@ -91,35 +98,27 @@
 .practical-info-wrapper {
     display: flex;
     flex-direction: column;
+
+    margin-top: 4rem;
 }
 
-.practical-info-wrapper h2 {
-    font-size: 1.25rem;
-    font-weight: 700;
-    margin: 2rem 0;
-
-    @media only screen and (max-width: 700px) {
-        text-align: center;
-    }
-}
-
-.practical-info-wrapper__items {
+.practical-info-wrapper > div {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 2rem;
+    gap: 0.5rem;
 
-    @media only screen and (max-width: 700px) {
+    @media only screen and (max-width: 1000px) {
         grid-template-columns: 1fr;
         margin: 2rem auto;
         width: 90%;
     }
 }
 
-.practical-info-wrapper__items strong {
+.practical-info-wrapper strong {
     font-weight: 700;
 }
 
-.practical-info-wrapper__items p {
+.practical-info-wrapper p {
     margin-top: 1rem;
 }
 
@@ -127,10 +126,12 @@
 
 .for-kids-wrapper {
     display: flex;
+    margin-top: 4rem;
+
     width: 100%;
 
     & img {
-        flex-basis: 65%;
+        flex-basis: 55%;
         max-height: 400px;
         object-fit: cover;
     }
@@ -141,15 +142,12 @@
         justify-content: center;
         align-items: flex-start;
         flex-basis: 45%;
-
         padding: 2rem;
-
         background: var(--dark-color);
         color: var(--light-color);
 
         & h2 {
             margin-bottom: 1rem;
-
             font-size: 1.25rem;
             font-weight: 700;
             color: var(--blue);
@@ -165,12 +163,12 @@
             margin-top: 1rem;
         }
 
-        @media only screen and (max-width: 800px) {
+        @media only screen and (max-width: 1000px) {
             padding: 4rem 2rem;
         }
     }
 
-    @media only screen and (max-width: 800px) {
+    @media only screen and (max-width: 1000px) {
         flex-direction: column;
     }
 }
@@ -187,12 +185,12 @@
         font-weight: 700;
         margin-bottom: 1rem;
 
-        @media only screen and (max-width: 700px) {
+        @media only screen and (max-width: 1000px) {
             text-align: center;
         }
     }
 
-    @media only screen and (max-width: 700px) {
+    @media only screen and (max-width: 1000px) {
         grid-template-columns: 1fr;
         margin: 2rem auto;
         width: 90%;
