--- a/src/css/header.css
+++ b/src/css/header.css
@@ -189,6 +189,9 @@
     transform: scale(0);
     transition: all 0.4s ease;
 
+    @media only screen and (max-width: 1050px) {
+        width: 50%;
+    }
     @media only screen and (max-width: 800px) {
         width: 100%;
     }
