--- a/src/css/exhibitions.css
+++ b/src/css/exhibitions.css
@@ -10,6 +10,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 70vw;
-    margin: 0 auto;
+    min-height: 100vh;
+    width: 100%;
+}
+
+.evolution-wrapper {
+    margin-bottom: 4rem;
+
+    & p {
+        margin-bottom: 1rem;
+    }
 }
