--- a/src/css/glitching.css
+++ b/src/css/glitching.css
@@ -1,3 +1,5 @@
+/* ----- GLITCHING EFFECT ----- */
+
 .hero {
     font-size: clamp(40px, 10vw, 100px);
     line-height: 1;
@@ -6,7 +8,6 @@
     z-index: 2;
     letter-spacing: 10px;
 
-    /* Bright things in dark environments usually cast that light, giving off a glow */
     filter: drop-shadow(0 1px 3px);
 }
 
@@ -344,7 +345,6 @@
 }
 
 .movement {
-    /* Normally this position would be absolute & on the layers, set to relative here so we can see it on the div */
     position: relative;
     animation: movement 8s step-end infinite;
 }
