--- a/src/css/events.css
+++ b/src/css/events.css
@@ -1,6 +1,7 @@
 @import url('./global.css');
 
 .events-wrapper__background {
+    /* ----- Image by Luca Severin @ luca_severin ----- */
     background: url('../../assets/images/luca-severin-HICcDxJ7PTM-unsplash.jpg')
         center / cover no-repeat;
 }
