--- a/src/css/global.css
+++ b/src/css/global.css
@@ -34,13 +34,15 @@ main {
     gap: 4rem;
 }
 
-/* ----- HERO ----- */
-
-.hero-wrapper {
+.flex {
     display: flex;
     justify-content: center;
     align-items: center;
+}
 
+/* ----- HERO ----- */
+
+.hero-wrapper {
     height: 85vh;
     width: 100%;
 
@@ -52,10 +54,7 @@ main {
 }
 
 .hero-wrapper__background {
-    display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     position: relative;
     height: 100%;
     width: 100%;
@@ -159,6 +158,44 @@ main {
 
 .main-event-wrapper p {
     margin-top: 1rem;
+}
+
+/* ----- CONTACT US WRAPPER ----- */
+
+.contact-us-wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+
+    width: 265px;
+
+    padding: 1.75rem;
+
+    background: var(--dark-color);
+    color: var(--light-color);
+
+    & span {
+        font-weight: 700;
+        text-transform: uppercase;
+    }
+
+    & p {
+        margin: 1rem 0 2.5rem 0;
+    }
+
+    & a {
+        background: var(--purple);
+        color: var(--light-color);
+        font-weight: 700;
+        padding: 0.5rem 2rem;
+        border-radius: 2px;
+        text-decoration: none;
+    }
+
+    @media only screen and (max-width: 1000px) {
+        width: 110%;
+        margin: 2rem -1rem 0 -1rem;
+        padding: 2rem;
+    }
 }
 
 /* ----- WRAPPER ON PRIVACY / TERMS & CONDITIONS ----- */
